# webdevrust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.ME  collection.json  compose.yaml  curltest  middleware.tex
.github/workflows/: main.yaml
.sqlx/: query-b91f41446c50b2aa64cc703ae04c425c004769d01b838b3f72e363319a330d33.json
examples/: password.rs  server.rs
middleware/: middleware.tex
src/: .env  1  CLAP.md  README.md  main  main.rs  models.rs  mysql_guide.md  postgres_guide.md  schema.rs
src/auth/: auth.rs  mod.rs  register.rs
src/data/: person.rs  test.rs
src/data/migrations/: 20250124183032_person.sql  20250125220602_person.sql  20251103023108_person.sql
